--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
                 </div>
                 <p>Full access for less than $1 a day</p>
                 <button onclick="alertFunction()">Sign Up</button>
-            </div>
-            <div id="bottom-right">
+            </div><div id="bottom-right">
                 <h4>Why Us</h4>
                 <ul>
                     <li>Tutorials by industry experts</li>
